<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vdtrecords20.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.vdtrecords20.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.vdtrecords20.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/about_us"
        android:name="com.example.vdtrecords20.about_us"
        android:label="activity_about_us"
        tools:layout="@layout/activity_about_us" />
    <activity
        android:id="@+id/carrito"
        android:name="com.example.vdtrecords20.carrito"
        android:label="activity_carrito"
        tools:layout="@layout/activity_carrito" />
    <activity
        android:id="@+id/contacto"
        android:name="com.example.vdtrecords20.contacto"
        android:label="activity_contacto"
        tools:layout="@layout/activity_contacto" />
    <activity
        android:id="@+id/maps"
        android:name="com.example.vdtrecords20.maps"
        android:label="activity_maps"
        tools:layout="@layout/activity_maps" />
    <activity
        android:id="@+id/register"
        android:name="com.example.vdtrecords20.register"
        android:label="activity_register"
        tools:layout="@layout/activity_register" />
    <activity
        android:id="@+id/tienda"
        android:name="com.example.vdtrecords20.tienda"
        android:label="activity_tienda"
        tools:layout="@layout/activity_tienda" />
    <activity
        android:id="@+id/user"
        android:name="com.example.vdtrecords20.user"
        android:label="activity_user"
        tools:layout="@layout/activity_user" />
    <activity
        android:id="@+id/login"
        android:name="com.example.vdtrecords20.login"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>